# COMPASS-AI

./: .env  .env.example  .gitignore  Makefile  README.md  README_RU.md  commands.txt  local-key-1782922070009.csv  pyproject.toml  requirements-dev.txt  requirements.txt  sint_members.env
app/: api.py  dashboard.py
config/: paths.yaml  settings.yaml  synthetic_data.yaml  synthetic_schema.yaml
diagrams/: README.md  compass_overview.mmd  compass_overview_RU.mmd  plane_integration.mmd  plane_integration_RU.mmd  repository_architecture.mmd  repository_architecture_RU.mmd  sandbox_pipeline.mmd  sandbox_pipeline_RU.mmd
docs/: doc.md  plan.md  sandbox27.md  synthetic_data_design.md  todo.md  todo_subproj_27.md
models/: compass_matching_model.pt  task_employee_matcher.onnx  task_employee_matcher.onnx.data
notebooks/: 01_synthetic_data_generation.ipynb  02_data_analysis.ipynb  03_model_training.ipynb  04_model_evaluation.ipynb  05_fairness_analysis.ipynb  06_plane_integration_demo.ipynb  07_business_report.ipynb
reports/: fairness_summary.json  model_metrics.json  onnx_export.json  onnx_validation.json  ranking_metrics.json  test_predictions.csv  training_config.json  training_history.csv
sandbox_app/: README.md  requirements.txt
scripts/: audit_employee_plane_mapping.py  check_plane_connection.py  check_plane_members.py  create_notebooks.py  diagnose_model_signal.py  generate_synthetic_data.py  start_compass_stack.sh  start_ollama.sh  start_plane.sh  stop_compass_stack.sh  stop_ollama.sh  stop_plane.sh
tests/: test_dataset.py  test_growth_scoring.py  (+4 more)
(+211 files in other folders)
