[project]
name = "compass-ai"
version = "0.1.0"
description = "Competency-Oriented Matching & Project Assignment Support System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Andrey" }
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "app", "scripts", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM"
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
plugins = []
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src", "app"]
omit = [
  "tests/*"
]